# SensorFusionND-P2-CameraBased2dFeatureTracking

./: CMakeLists.txt  README.md
evaluation/: eval-detector-AKAZE-AKAZE.json  eval-detector-BRISK-BRIEF.json  eval-detector-BRISK-BRISK.json  eval-detector-BRISK-FREAK.json  eval-detector-BRISK-ORB.json  eval-detector-BRISK-SIFT.json  eval-detector-BRISK-SURF.json  eval-detector-HARRIS-BRIEF.json  eval-detector-HARRIS-BRISK.json  eval-detector-HARRIS-FREAK.json  eval-detector-HARRIS-ORB.json  eval-detector-HARRIS-SIFT.json  eval-detector-HARRIS-SURF.json  eval-detector-ORB-BRIEF.json  eval-detector-ORB-BRISK.json  eval-detector-ORB-FREAK.json  eval-detector-ORB-ORB.json  eval-detector-ORB-SIFT.json  eval-detector-ORB-SURF.json  eval-detector-SHITOMASI-BRIEF.json  eval-detector-SHITOMASI-BRISK.json  eval-detector-SHITOMASI-FREAK.json  eval-detector-SHITOMASI-ORB.json  eval-detector-SHITOMASI-SIFT.json  eval-detector-SHITOMASI-SURF.json  eval-detector-SIFT-BRIEF.json  eval-detector-SIFT-BRISK.json  eval-detector-SIFT-FREAK.json  eval-detector-SIFT-SURF.json  eval-detector-SURF-BRIEF.json  eval-detector-SURF-BRISK.json  eval-detector-SURF-FREAK.json  eval-detector-SURF-ORB.json  eval-detector-SURF-SIFT.json  eval-detector-SURF-SURF.json
report/: README.md  performance_evaluation.html  performance_evaluation.ipynb
src/: MidTermProject_Camera_Student.cpp  matching2D_Student.cpp  matplotlibcpp.h  mycvtools.cpp  mycvtools.h  properties.cpp  properties.h
